# jina-embeddings-v4-vllm-plugin

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deploy/: DEPLOY.md  Dockerfile  bake_checkpoint.py
docs/: COMPAT.md  VALIDATION.md
docs/superpowers/plans/: 2026-06-04-jina-v4-vllm-multivector.md  2026-06-10-pypi-publish-restructure.md
docs/superpowers/specs/: 2026-06-04-jina-v4-vllm-multivector-design.md  2026-06-10-pypi-publish-restructure-design.md
reports/: RECOMMENDATION.md  stage1_image.md  stage1_text.md  variant_c.md
research/: Makefile  README.md
research/deploy/: DEPLOY.md  Dockerfile
research/src/jinav4_vllm/common/: artifacts.py  probes.py
research/src/jinav4_vllm/eval/: metrics.py
research/src/jinav4_vllm/modal_app/: app.py  collect.py  offline.py  reference.py
research/src/jinav4_vllm/projector/: extract.py  merge.py
research/src/jinav4_vllm/vllm_plugin/: pyproject.toml
research/tests/: test_client.py  test_eval_metrics.py  test_eval_report.py  test_multivector_core.py  test_probes.py
src/jina_v4_vllm_plugin/: __init__.py
src/jinav4_vllm/: client.py
src/jinav4_vllm/common/: imaging.py  probes.py
src/jinav4_vllm/eval/: report.py
src/jinav4_vllm/modal_app/: app.py  client.py  offline.py  reference.py  revalidate.py  serve_a.py  serve_b.py  serve_c.py
src/jinav4_vllm/multivector/: core.py
src/jinav4_vllm/vllm_plugin/: jina_image_chat_template.jinja  pyproject.toml
src/jinav4_vllm/vllm_plugin/jina_v4_vllm_plugin/: __init__.py  model.py
tests/: test_artifacts.py  test_eval_report.py  test_imaging.py  test_plugin_packaging.py  test_projector_merge.py
