[project]
name = "jinav4-vllm"
version = "0.1.0"
description = "Jina v4 multi-vector multimodal embeddings on vLLM — feasibility study"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pillow>=10.0",
    "modal>=0.64",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jinav4_vllm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
