[project]
name = "jina-v4-vllm-plugin"
version = "0.1.1"
description = "vLLM out-of-tree model: Jina Embeddings v4 multi-vector (token_embed) on Qwen2.5-VL"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Mazyod", email = "860511+Mazyod@users.noreply.github.com" }]
keywords = ["vllm", "jina", "embeddings", "multi-vector", "colbert", "late-interaction", "multimodal", "qwen2-5-vl", "retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# vLLM is the runtime host (the official vllm/vllm-openai image provides it); intentionally NOT a
# hard dependency so `pip install --no-deps` into that image does not try to re-resolve vLLM/torch.
# Pin the host vLLM version separately — see research/docs/COMPAT.md.

[project.entry-points."vllm.general_plugins"]
jina_v4 = "jina_v4_vllm_plugin:register"

[project.urls]
Homepage = "https://github.com/Mazyod/jina-embeddings-v4-vllm-plugin"
Repository = "https://github.com/Mazyod/jina-embeddings-v4-vllm-plugin"
Documentation = "https://github.com/Mazyod/jina-embeddings-v4-vllm-plugin#readme"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jina_v4_vllm_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
